[gd_scene load_steps=5 format=2]

[ext_resource path="res://projectiles/rocket/explosion.png" type="Texture" id=1]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/effects/treasure_area/area_scene.gd" type="Script" id=2]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/effects/treasure_area/treasure_progress_bar.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="TreasureArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource( 2 )
progress_bar_scene = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 15, 15 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
visible = false
modulate = Color( 1, 0.866667, 0, 0.392157 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="DigTimer" type="Timer" parent="."]
wait_time = 0.35

[connection signal="body_entered" from="." to="." method="_on_TreasureArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TreasureArea_body_exited"]
[connection signal="timeout" from="DigTimer" to="." method="_on_DigTimer_timeout"]
